@@ -32,6 +32,10 @@ Finally, you can cause DSSS to remove /all/ compiled files, essentially leaving
 the source directory as it was before DSSS was used at all, with the command:
 $ dsss distclean
 
+If you'd like certain flags to be included whenever you call DSSS, you can add
+them to your DSSS RC file: ~/.dsssrc on POSIX, dsss.rc next to dsss.exe on
+Windows.
+
 
 == Installing Software with DSSS ==
 
