@@ -97,6 +97,10 @@ Any section may have a 'buildflags' setting, which specifies the flags to be
 used while building that section. For example,
 buildflags=-O
 
+Flags for use with release and debug builds (when using --debug) can be
+specified separately in 'releaseflags' and 'debugflags', respectively.
+'debugflags' defaults to '-debug -gc'.
+
 <h3> SECTION TYPES </h3>
 
 Although section types are usually determined automatically from the section
@@ -407,6 +411,17 @@ most useful for settings such as 'buildflags':
 
 [*]
 buildflags=-O
+
+Note that any settings in a named section will override those in "*" sections.
+For example, in this situation:
+
+[*]
+buildflags=-O
+
+[mydlib]
+buildflags+=-release
+
+mydlib's buildflags are only "-release".
 
 
 <h2> ADVANCED FEATURES </h2>
